[fix] client: fix mobile layout bugs

--- a/client/assets/stylus/core/_base.styl
+++ b/client/assets/stylus/core/_base.styl
@@ -79,7 +79,7 @@ for n in 1...6 {
     margin 0
     padding 0
     line-height 1.5
-    color $heading-color
+    // color $heading-color
     font-family $font-family-headings
     font-weight bold
     font-size (1rem + (6 - n) * 0.2rem)
